@@ -1,3 +1,12 @@
+2009-11-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/41935
+	* gcc.dg/pr41935.c: New test.
+	* c-c++-common/pr41935.c: New test.
+	* c-c++-common/builtin-offsetof.c (f0): Allow index one past the last
+	element.
+	* gcc.c-torture/execute/pr41935.c: New test.
+
 2009-11-05  Jason Merrill  <jason@redhat.com>
 
 	PR c++/34180
